# Code-Challenge-Generator

./: README.md  docker-compose.yaml  project_template.py
nginx/: nginx.conf
src/backend/: .dockerignore  .env-example  Dockerfile  database.db  pyproject.toml  server.py
src/backend/src/: main.py
src/backend/src/ai/: ai_generator.py  prompts.py
src/backend/src/contants/: __init__.py
src/backend/src/database/: db.py  models.py
src/backend/src/routers/: challenge.py  router.py  webhooks.py
src/backend/src/utilities/: logger.py
src/frontend/: .env-example  .gitignore  Dockerfile  package-lock.json  package.json  vite.config.js
src/frontend/src/: App.jsx
src/frontend/src/auth/: AuthenticationPage.jsx  ClerkProviderWithRoutes.jsx
src/frontend/src/challenge/: ChallengeGenerator.jsx  MCQChallenge.jsx
src/frontend/src/history/: HistoryPanel.jsx
src/frontend/src/layout/: Layout.jsx
src/frontend/src/utils/: api.js
