[project]
name = "farm_stack"
version = "0.1.0"
description = "FARM Stack app to build on a gen-ai"
authors = [
    {name = "M-Hamza380",email = "hamza.anjum380@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.1.1",
    "fastapi[all]>=0.116.1",
    "uvicorn>=0.35.0",
    "clerk-backend-api>=3.0.5",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "aiostream>=0.7.0",
    "sqlalchemy>=2.0.41",
    "svix>=1.65.0",
    "google-genai>=1.37.0",
    "colorama>=0.4.6",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

